# crowleer

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  job.html  jobs_page.html  pyproject.toml  setup.cfg
crowleer/: __main__.py  config.py  loader.py  page.py
crowleer/api/: client.py  companies.py  jobs.py  schemas.py
crowleer/company_pages/: base.py  moderna_page.py  wur_page.py
crowleer/crawlers/: base.py  moderna.py  wur.py
